#summary Changelog for all changes since the fork

= Changes =
== Version 0.8.2 ==
  * Minor bugfixes

== Version 0.8.1 ==
  * Addressed severe memory-issues
  * Moved menu-definitions from code to xml files
  * Added information to preferences-screen
  * Refactored menus
  * Fixed articles not getting marked as read
  * Fixed offline-setting

== Version 0.8 ==
  * Added support for donations, status is checked once after providing the mailadress used to poste the donation
  * For donators: Added pre-downloading of images for offline viewing (see project page for more information)
  * Size of Swipe-Area now depends on density and screen-size and is adjusted accordingly
  * Fixed Issue #36: ([https://code.google.com/p/ttrss-reader-fork/issues/detail?id=36 functional - suggestion]) (show read articles for Virtual Categories)
  * Fixed Issue #37: ([https://code.google.com/p/ttrss-reader-fork/issues/detail?id=37 display source in view "All Articles"])
  * Fixed Issue #38: ([https://code.google.com/p/ttrss-reader-fork/issues/detail?id=38 mark all read in "All Articles"])
  * Fixed Issue #40 (Better error-handling for disabled API and Not logged in 

== Version 0.7.8 ==
  * Added HTTP-Authentication. Resolves Issue #32 ([https://code.google.com/p/ttrss-reader-fork/issues/detail?id=32 If an http 401 (denied) is received, try http authentication])
  * Fixed Issue 34: ([https://code.google.com/p/ttrss-reader-fork/issues/detail?id=34 Article refreshing problem]) 

== Version 0.7.7 ==
  * Now using server-side method for marking feeds/categories as read
  * Fixed sorting of categories
  * Tried to add compatibility-mode for old (pre 1.5) servers

== Version 0.7.6 ==
  * New Application-Icon and Overlay-icons for star/publish 
  * Added support for the star- and publish-feature. Resolves Issue #23 ([https://code.google.com/p/ttrss-reader-fork/issues/detail?id=10 Toggle star/unstar of an article])
  * Fixed display of fresh/starred/published articles in the virtual feeds